--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,11 +72,10 @@ services:
   nrwa:
     <<: *node
     <<: *site-cmd
-    working_dir: /root/sites/athleticbusiness.com
+    working_dir: /root/sites/content.nrwa.com
     environment:
       <<: *env
       <<: *env-virgon
-      AB_PROJECTS_GRAPHQL_URL: ${AB_PROJECTS_GRAPHQL_URL-https://graphql.ab-projects.parameter1.com}
       PORT: 80
       EXPOSED_PORT: 9901
       LIVERELOAD_PORT: 19901
