--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -36,7 +36,7 @@ jobs:
         namespace:
           - staging-websites-virgon
         site:
-          - content.nrwa.com
+          - content.nrwa.org
     steps:
       - uses: actions/checkout@v2
       - name: Deploy to Kubernetes
