--- a/packages/theme-monorail/package.json
+++ b/packages/theme-monorail/package.json
@@ -4,6 +4,7 @@
   "author": "Brandon Krigbaum <brandon@parameter1.com>",
   "repository": "https://github.com/parameter1/rogue-monkey-media-websites/tree/master/packages/theme-monorail",
   "license": "MIT",
+  "main": "index.js",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js --ext .vue --max-warnings 5 --ignore-path ../../.eslintignore ./",
