--- a/sites/content.nrwa.org/package.json
+++ b/sites/content.nrwa.org/package.json
@@ -23,6 +23,7 @@
     "@parameter1/base-cms-utils": "^2.22.2",
     "@parameter1/base-cms-web-cli": "^2.62.0",
     "@rogue-monkey-media/package-global": "^0.1.2",
+    "@rogue-monkey-media/package-theme-monorail": "^0.1.2",
     "csvtojson": "^2.0.10",
     "debounce": "^1.2.0",
     "graphql": "^14.5.4",
