--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -97,6 +97,7 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           build-args: |
             SITE=${{ matrix.site }}
