--- a/sites/content.nrwa.org/package.json
+++ b/sites/content.nrwa.org/package.json
@@ -5,6 +5,14 @@
   "repository": "https://github.com/parameter1/rogue-monkey-media-websites/tree/master/sites/content.nrwa.org",
   "license": "MIT",
   "private": true,
+  "website": {
+    "id": "6176b67ef20045c5348b457f",
+    "tenant": "roguemonkeymedia_all",
+    "account": "roguemonkeymedia",
+    "stack": "virgon",
+    "key": "nrwa",
+    "deploy": true
+  },
   "scripts": {
     "dev": "basecms-website dev --compile-dir ../../packages --watch-dir ../../packages",
     "build": "basecms-website build",
@@ -13,6 +21,14 @@
     "lint:fix": "yarn lint --fix",
     "test": "yarn lint && yarn compile --no-clean"
   },
+  "engines": {
+    "node": ">=14.15"
+  },
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
   "dependencies": {
     "@parameter1/base-cms-marko-core": "^4.2.0",
     "@parameter1/base-cms-marko-web": "^4.2.1",
@@ -28,13 +44,5 @@
     "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
     "object-path": "^0.11.5"
-  },
-  "engines": {
-    "node": ">=14.15"
-  },
-  "os": [
-    "darwin",
-    "linux",
-    "win32"
-  ]
+  }
 }
