Cleanup docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,12 +71,10 @@ services:
     <<: *site-cmd
     working_dir: /root/sites/content.nrwa.org
     environment:
-      <<: [*env, *env-virgon]
+      <<: *env
       PORT: 80
       EXPOSED_PORT: 9901
       LIVERELOAD_PORT: 19901
-      TENANT_KEY: roguemonkeymedia_all
-      SITE_ID: 6176b67ef20045c5348b457f
     ports:
       - "9901:80"
       - "19901:19901"
