--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ x-env-defaults: &env
   IDENTITYX_API_TOKEN: ${IDENTITYX_API_TOKEN-(unset)}
   IDENTITYX_GRAPHQL_URI: ${IDENTITYX_GRAPHQL_URI-https://identity-x.parameter1.com/graphql}
   BASE_BROWSE_GRAPHQL_URI: ${BASE_BROWSE_GRAPHQL_URI-https://base-browse.virgon.base.parameter1.com/graphql}
+  USE_LINK_INJECTED_BODY: ${USE_LINK_INJECTED_BODY-false}
   RECAPTCHA_V3_SITE_KEY: ${RECAPTCHA_V3_SITE_KEY-(unset)}
   RECAPTCHA_V3_SECRET_KEY: ${RECAPTCHA_V3_SECRET_KEY-(unset)}
   NATIVEX_SERVE_URI: ${NATIVEX_SERVE_URI-}
