Update MindfulPost /sponsored routing & middleware

--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -32,6 +32,7 @@
     "@parameter1/base-cms-marko-web-social-sharing": "^4.74.0",
     "@parameter1/base-cms-marko-web-theme-monorail": "^4.80.0",
     "@parameter1/base-cms-marko-web-theme-monorail-magazine": "^4.80.0",
+    "@parameter1/base-cms-mindful": "^4.78.2",
     "@parameter1/base-cms-object-path": "^4.74.0",
     "@parameter1/base-cms-utils": "^4.74.0",
     "@parameter1/base-cms-web-cli": "^4.74.0",
