--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ x-node-defaults: &node
 
 x-env-defaults: &env
   CSS_MODE: ${CSS_MODE-optimized}
+  ENABLE_CONTENT_METER: ${ENABLE_CONTENT_METER-false}
   NEW_RELIC_ENABLED: ${NEW_RELIC_ENABLED-0}
   NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY-(unset)}
   NODE_ENV: development
